| Bug #31311 | TABLESPACE identifiers do not support special characters | ||
|---|---|---|---|
| Submitted: | 1 Oct 2007 10:57 | Modified: | 3 Dec 2007 14:13 |
| Reporter: | Peter Laursen (Basic Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Falcon storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.02 | OS: | Any |
| Assigned to: | Sergey Vojtovich | CPU Architecture: | Any |
[1 Oct 2007 10:57]
Peter Laursen
[1 Oct 2007 11:15]
MySQL Verification Team
Thank you for the bug report. Microsoft Windows [versão 6.0.6000] Copyright (c) 2006 Microsoft Corporation. Todos os direitos reservados. c:\dev>cd 6.0 c:\dev\6.0>bin\mysqladmin -uroot create db6 c:\dev\6.0>bin\mysql -uroot db6 Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 2 Server version: 6.0.3-alpha-nt Source distribution Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql> create tablespace `my_sp` add datafile 'myspc1' engine = falcon; Query OK, 0 rows affected (1.61 sec) mysql> create tablespace `my sp` add datafile 'myspc2' engine = falcon; ERROR 65433 (HY000): Unknown error -103 mysql>
[22 Nov 2007 14:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38283 ChangeSet@1.2686, 2007-11-22 18:46:54+04:00, svoj@mysql.com +14 -0 BUG#31311 - TABLESPACE identifiers do not support special characters CREATE TABLESPACE statement fails if tablespace name identifier contains some non-alnum characters (e.g. spaces). Fixed by quoting internal falcon queries. Also fixed that SHOW CREATE TABLE didn't quote tablespace name identifier. Note that it is still not possible to create tablespace with quotes in tablespace name identifier, which is subject of: BUG32620 - Falcon doesn't support quotes as field name and tablespace name identifiers
[28 Nov 2007 11:10]
Sergei Glukhov
ok to push sql_show.cc change and test results update.
[28 Nov 2007 15:47]
Kevin Lewis
This should handle all tablespace names except ones with embedded doulbe quotes. Those are handled by Bug#32620.
[30 Nov 2007 11:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38945 ChangeSet@1.2716, 2007-11-30 15:11:25+04:00, svoj@mysql.com +1 -0 BUG#31311 - TABLESPACE identifiers do not support special characters After merge fix.
[30 Nov 2007 20:42]
Bugs System
Pushed into 6.0.4-alpha
[3 Dec 2007 14:13]
MC Brown
A note has been added to the 6.0.4 changelog: TABLESPACE names within Falcon did not support characters outside the alpha-numeric ASCII character set.
