BUG#31311 - TABLESPACE identifiers do not support special characters

CREATE TABLESPACE statement fails if tablespace name identifier
contains some non-alnum characters (e.g. spaces).

Fixed by quoting internal falcon queries. Also fixed that SHOW CREATE
TABLE didn't quote tablespace name identifier.

Note that it is still not possible to create tablespace with quotes
in tablespace name identifier, which is subject of:
BUG32620 - Falcon doesn't support quotes as field name and tablespace
           name identifiers